<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Visitors_Fragment">


    <LinearLayout
        style="@style/parents_Attribute"
        android:layout_marginTop="@dimen/dp15"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <LinearLayout
            style="@style/height_wrap_parent"
            android:layout_margin="@dimen/dp5"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_visitdate"
                    style="@style/parents_Attribute"
                    android:layout_marginLeft="@dimen/dp4"
                    android:layout_marginRight="@dimen/dp4"
                    android:gravity="start"
                    android:hint="@string/dateofvisit"
                    android:inputType="datetime"
                    android:padding="@dimen/dp12"
                    android:singleLine="true"
                    android:textSize="@dimen/text16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_visitorname"
                    style="@style/parents_Attribute"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/dp4"
                    android:layout_marginRight="@dimen/dp2"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:hint="@string/visitorname"
                    android:inputType="text"
                    android:padding="@dimen/dp12"
                    android:singleLine="true"
                    android:textSize="@dimen/text16" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            style="@style/height_wrap_parent"
            android:layout_margin="@dimen/dp5"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_fromvisitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp4"
                    android:gravity="start"
                    android:hint="@string/fromvisitor"
                    android:inputType="text"
                    android:padding="@dimen/dp12"
                    android:singleLine="true"
                    android:textSize="@dimen/text16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_purposevisit"
                    style="@style/parents_Attribute"
                    android:layout_marginLeft="@dimen/dp5"
                    android:gravity="start"
                    android:hint="Visit Purpose"
                    android:inputType="text"
                    android:padding="@dimen/dp12"
                    android:singleLine="true"
                    android:textSize="@dimen/text16" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            style="@style/height_wrap_parent"
            android:layout_margin="@dimen/dp5"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_tomeet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp4"
                    android:gravity="start"
                    android:hint="@string/tomeet"
                    android:inputType="text"
                    android:padding="@dimen/dp12"
                    android:singleLine="true"
                    android:textSize="@dimen/text16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_contactNo"
                    style="@style/parents_Attribute"
                    android:layout_marginLeft="@dimen/dp5"
                    android:gravity="start"
                    android:hint="@string/ContactNumber"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="@dimen/dp12"
                    android:singleLine="true"
                    android:textSize="@dimen/text16" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            style="@style/height_wrap_parent"
            android:layout_margin="@dimen/dp5"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_priorityapointed"
                    style="@style/height_wrap_parent"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/PriorityAppointed"
                    android:inputType="text"
                    android:padding="@dimen/dp12"
                    android:textSize="@dimen/text16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_mailid"
                    style="@style/height_wrap_parent"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/Mailid"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp12"
                    android:textSize="@dimen/text16" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            style="@style/height_wrap_parent"
            android:layout_margin="@dimen/dp5"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_intime"
                    style="@style/height_wrap_parent"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusableInTouchMode="false"
                    android:gravity="start"
                    android:hint="@string/InTime"
                    android:inputType="time"
                    android:padding="@dimen/dp12"
                    android:textSize="@dimen/text16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_outtime"
                    style="@style/height_wrap_parent"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusableInTouchMode="false"
                    android:gravity="start"
                    android:hint="@string/Outtime"
                    android:inputType="time"
                    android:padding="@dimen/dp12"
                    android:textSize="@dimen/text16" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/height_wrap_parent"
            android:layout_margin="@dimen/dp5"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_visitorremark"
                    style="@style/height_wrap_parent"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/Remarks"
                    android:inputType="text"
                    android:padding="@dimen/dp12"
                    android:textSize="@dimen/text16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_incharge"
                    style="@style/height_wrap_parent"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/Incharge"
                    android:inputType="text"
                    android:padding="@dimen/dp12"
                    android:textSize="@dimen/text16" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/bt_submit"
        android:layout_width="@dimen/dp150"
        android:layout_height="@dimen/dp50"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_editor_absoluteX="@dimen/dp150"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>