<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/navigation_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="RtlCompat">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nav_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-light"
                    android:gravity="start"
                    android:text="@string/tr_nsvision"
                    android:textAllCaps="true"
                    android:textColor="#FFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nav_user_name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-light"
                    android:gravity="start"
                    android:text="@string/atsymbol"
                    android:textAllCaps="true"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nav_user_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-light"
                    android:gravity="start"
                    android:text="@string/tr_nsvision1"
                    android:textAllCaps="true"
                    android:textColor="#FFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/nav_subdiv_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:gravity="start"
                android:text="540038"
                android:textAllCaps="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="2.5"
            android:orientation="vertical"
            tools:ignore="RtlCompat">

            <ImageView
                android:id="@+id/myImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_power"
                app:tint="@color/white" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>